chore: update readme + JDK 8 fix