@@ -14,8 +14,8 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.boot.web.server.LocalServerPort;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
+import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
 import java.util.Optional;
 
 import static org.mockito.Mockito.when;
@@ -46,7 +46,7 @@ public class ProductPactProviderTest {
     @State("products exist")
     void toProductsExistState() {
         when(productRepository.fetchAll()).thenReturn(
-                List.of(new Product("09", "CREDIT_CARD", "Gem Visa", "v1"),
+                Arrays.asList(new Product("09", "CREDIT_CARD", "Gem Visa", "v1"),
                         new Product("10", "CREDIT_CARD", "28 Degrees", "v1")));
     }
 
